analysis/low-level-api-fir/testData/lazyResolve/errors/propertyDuplicatedContextParameter2.kt
// LANGUAGE: +ContextParameters
// IGNORE_FIR

context(c: Int)
context(c<caret>: String)
val foo get() = 0